--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    background-image: url(./image/good12.jpg);
+    background-image: url(./image/good12.jpeg);
     text-align: center;
     background-size:cover;
     
