--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    background-image: url(./image/good12.jpeg);
+    background-image: url(https://thumbs.dreamstime.com/b/including-marvel-super-heroes-models-bangkok-thailand-may-superheroes-figure-action-home-146591280.jpg);
     text-align: center;
     background-size:cover;
     
