--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    background-image: url(https://www.dreamstime.com/photos-images/super-heroes.htmlhttps://www.dreamstime.com/photos-images/super-heroes.html);
+    background-image: url(https://github.com/AkshayKumar1556/Superhero-Hunter-App/blob/main/image/good12.jpg);
     text-align: center;
     background-size:cover;
     
